// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🧪 BUTTON: style tests: with basic button: should render with correct styles 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 a:link,
.emotion-0 a:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  border: 2px solid var(--color-primary);
  color: var(--color-primary);
}

.emotion-0 a:link:hover,
.emotion-0 a:visited:hover,
.emotion-0 a:link:active,
.emotion-0 a:visited:active {
  background-color: var(--color-primary);
  color: var(--color-white);
}

<span
  className="emotion-0"
>
  <a
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
  />
</span>
`;

exports[`🧪 BUTTON: style tests: with full button: should render with correct styles 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 a:link,
.emotion-0 a:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  border: 2px solid var(--color-primary);
  background-color: var(--color-primary);
  color: var(--color-white);
}

.emotion-0 a:link:hover,
.emotion-0 a:visited:hover,
.emotion-0 a:link:active,
.emotion-0 a:visited:active {
  background-color: var(--color-dark-primary);
}

<span
  className="emotion-0"
>
  <a
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
  />
</span>
`;
